tests/ui/reborrow/coerce-shared-generics.stderr
error: implementing `CoerceShared` requires corresponding fields to match, be reborrowable with `CoerceShared`, or coerce a mutable reference field to a shared reference field
  --> $DIR/coerce-shared-generics.rs:15:5
   |
LL |     meta: U,
   |     ------- source field `meta` has type `U`
...
LL |     meta: U,
   |     ^^^^^^^ target field `meta` has type `U`

error: aborting due to 1 previous error

